<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_nome"
                    android:textColor="@color/bnb_text" />

                <TextView
                    android:id="@+id/tv_pessoa_dados_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recyclermain_item_texto_nome_label"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_cpf_cnpj"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_pessoa_dados_cpfcnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recyclermain_item_texto_cpf_cnpj_label"
                    android:textColor="#2F2E2E" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_telefone"
                    android:textColor="@color/bnb_text" />

                <TextView
                    android:id="@+id/tv_pessoa_dados_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recyclermain_item_texto_telefone_label"
                    android:textColor="#2F2E2E" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_email"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_pessoa_dados_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recyclermain_item_texto_email_label"
                    android:textColor="#2F2E2E" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_end_res"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_pessoa_dados_end_resid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recyclermain_item_texto_end_res_label"
                    android:textAlignment="center"
                    android:textColor="#2F2E2E" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_end_com"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_pessoa_dados_end_com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/recyclermain_item_texto_end_com_label"
                    android:textAlignment="center"
                    android:textColor="@color/bnb_text2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recyclermain_item_texto_eventos"
                    android:textColor="#5D5A5A" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_pessoa_dados_editar"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="0.7"
                        android:background="@color/bnb_secundary"
                        android:text="@string/recyclermain_item_botao_editar"
                        android:textColor="@color/bnb_text" />

                    <Button
                        android:id="@+id/btn_pessoa_dados_excluir"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="0.6"
                        android:background="@color/bnb_secundary"
                        android:text="@string/recyclermain_item_botao_excluir"
                        android:textColor="@color/bnb_text" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ProgressBar
                android:id="@+id/pb_item_pessoa"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:visibility="gone" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>