<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.activity.MainActivity">

        <SearchView
            android:id="@+id/search_main_pesquisar_nome"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:iconifiedByDefault="false"
            android:queryHint="@string/main_texto_pesquisar_usuarios"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_search" />

        <Button
            android:id="@+id/btn_cadastrar_usuario"
            style="@style/Theme.materialbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@color/bnb_secundary"
            android:padding="5dp"
            android:text="@string/botao_main_cadastar_usuario"
            android:textColor="@color/bnb_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/textview_main_endereco_titulo"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/search_main_pesquisar_nome"
            app:layout_constraintTop_toBottomOf="@+id/search_main_pesquisar_nome" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pessoa_dados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_main_pessoas_encontradas_banco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/main_texto_usuarios_encontrados"
            android:textColor="@color/bnb_text2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_pessoa_dados" />

        <ProgressBar
            android:id="@+id/pb_main"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_pessoa_dados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_pessoa_dados" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>