<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.activity.CadastrarEndereco">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/textview_usuario_cad_end_titulo"
                android:textColor="#000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spin_tipo_endereco"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/tipoEndereco"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_incluir_endereco_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:hint="@string/cad_usuario_end_cep"
                        android:maxWidth="488dp"
                        app:hintTextColor="@color/bnb_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_incluir__endereco_logradouro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:hint="@string/cad_usuario_end_logradouro"
                        android:maxWidth="488dp"
                        app:hintTextColor="@color/bnb_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_incluir_endereco_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:hint="@string/cad_usuario_end_numero"
                        android:maxWidth="488dp"
                        app:hintTextColor="@color/bnb_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spin_tipo_endereco_comercial"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:entries="@array/tipoEnderecoComercial"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_incluir_endereco_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:hint="@string/cad_usuario_end_cidade"
                        android:maxWidth="488dp"
                        app:hintTextColor="@color/bnb_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_incluir_endereco_estado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        android:hint="@string/cad_usuario_end_estado"
                        android:maxWidth="488dp"
                        app:hintTextColor="@color/bnb_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="right">

                <Button
                    android:id="@+id/btn_incluir_endereco_pessoa_fisica_salvar"
                    style="@style/Theme.materialbutton"
                    android:layout_width="400dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/bnb_secundary"
                    android:text="@string/botao_usuario_cad_salvar_pessoa"
                    android:textColor="@color/bnb_text"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_incluir_endereco_pessoa_juridica_salvar"
                    style="@style/Theme.materialbutton"
                    android:layout_width="400dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/bnb_secundary"
                    android:text="@string/botao_usuario_cad_salvar_pessoa"
                    android:textColor="@color/bnb_text"
                    android:textSize="20sp"
                    tools:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>